@startuml
' CLASS THEME
skinparam classAttributeIconSize 0
skinparam RoundCorner 15
skinparam Dpi 300

<style>
class {
BackgroundColor #LightGreen
FontStyle bold
FontColor darkred
AttributeFontSize 14
}
</style>

' ==========================
' Main Entity Classes
' ==========================
class Patient {
- id : ?int
- fName : string
- lName : string
- phone : string
- email : string
- gender : Genders
- dOB : DateTime
- address : string
+ getFName() : string
+ getLName() : string
+ getPhone() : string
+ getEmail() : string
+ getGender() : Genders
+ getDOB() : DateTime
+ getAddress() : string
+ setFName(fName : string) : void
+ setLName(lName : string) : void
+ setPhone(phone : string) : void
+ setEmail(email : string) : void
+ setGender(gender : Genders) : void
+ setDOB(dOB : DateTime) : void
+ setAddress(address : string) : void
}

class Doctor {
- id : ?int
- fName : string
- lName : string
- phone : string
- email : string
- spec : string
- depId : ?int
+ getFName() : string
+ getLName() : string
+ getPhone() : string
+ getEmail() : string
+ getSpec() : string
+ getDepId() : ?int
+ setFName(fName : string) : void
+ setLName(lName : string) : void
+ setPhone(phone : string) : void
+ setEmail(email : string) : void
+ setSpec(spec : string) : void
+ setDepId(depId : ?int) : void
}

class Department {
- id : ?int
- name : string
- location : string
+ getName() : string
+ getLocation() : string
+ setName(name : string) : void
+ setLocation(location : string) : void
}

enum Genders {
MALE
FEMALE
OTHER
UNSET
}

' ==========================
' Relationships
' ==========================
Doctor "0..*" --> "0..1" Department : belongs to

Patient --> Genders : uses

@enduml